--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -1,5 +1,7 @@
 {
-  "AppDbContext": "Server=localhost,5010; Database=ABDB; User Id=sa; Password=!Laves1234; MultipleActiveResultSets=true; TrustServerCertificate=True",
+  "ConnectionStrings": {
+    "AppDbContext": "Server=localhost,5010; Database=ABDB; User Id=sa; Password=!Laves1234; MultipleActiveResultSets=true; TrustServerCertificate=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
