--- a/Logic/Logic.csproj
+++ b/Logic/Logic.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="14.0.0" />
+    <PackageReference Include="FluentValidator" Version="2.0.4" />
   </ItemGroup>
 
   <ItemGroup>
