--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -2,6 +2,9 @@
   "ConnectionStrings": {
     "AppDbContext": "Server=localhost,5010; Database=ABDB; User Id=sa; Password=!Laves1234; MultipleActiveResultSets=true; TrustServerCertificate=True"
   },
+  "GeneratorServerSettings": {
+    "BaseUrl": ""
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
