Image endpoints fix

--- a/WebAPI/appsettings.Development.json
+++ b/WebAPI/appsettings.Development.json
@@ -5,6 +5,9 @@
   "GeneratorServerSettings": {
     "BaseUrl": "localhost:44307"
   },
+  "ImageRepositorySettings": {
+    "Path": "C:\\ImageRepo"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
