--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -3,7 +3,10 @@
     "AppDbContext": "Server=localhost,5010; Database=ABDB; User Id=sa; Password=!Laves1234; MultipleActiveResultSets=true; TrustServerCertificate=True"
   },
   "GeneratorServerSettings": {
-    "BaseUrl": "localhost:44307"
+    "BaseUrl": "localhost:44307",
+  },
+  "ImageRepositorySettings": {
+    "Path": "C:\\ImageRepo"
   },
   "Logging": {
     "LogLevel": {
