Connected generation service

--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -3,10 +3,10 @@
     "AppDbContext": "Server=localhost,5010; Database=ABDB; User Id=sa; Password=!Laves1234; MultipleActiveResultSets=true; TrustServerCertificate=True"
   },
   "GeneratorServerSettings": {
-    "BaseUrl": "localhost:8188"
+    "BaseUrl": "127.0.0.1:8000"
   },
   "ImageRepositorySettings": {
-    "Path": "C:\\ImageRepo"
+    "Path": "D:\\ImageRepo"
   },
   "Logging": {
     "LogLevel": {
