--- a/WebAPI/appsettings.Development.json
+++ b/WebAPI/appsettings.Development.json
@@ -3,7 +3,7 @@
     "AppDbContext": "Server=localhost,5010; Database=ABDB; User Id=sa; Password=!Laves1234; MultipleActiveResultSets=true; TrustServerCertificate=True"
   },
   "GeneratorServerSettings": {
-    "BaseUrl": "localhost:44307"
+    "BaseUrl": "http://127.0.0.1:8000"
   },
   "ImageRepositorySettings": {
     "Path": "C:\\ImageRepo"
