--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -3,7 +3,7 @@
     "AppDbContext": "Server=localhost,5010; Database=ABDB; User Id=sa; Password=!Laves1234; MultipleActiveResultSets=true; TrustServerCertificate=True"
   },
   "GeneratorServerSettings": {
-    "BaseUrl": "127.0.0.1:8000"
+    "BaseUrl": "127.0.0.1:8188" //"127.0.0.1:8000"
   },
   "ImageRepositorySettings": {
     "Path": "D:\\ImageRepo"
